<resources>
    <string name="app_name">Sallefy Pocket</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="home_activity">Main Activity</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="enter_username_placeholder">Enter username</string>
    <string name="enter_password_placeholder">Enter password</string>
    <string name="enter_email_placeholder">Enter email</string>
    <string name="email_title">Email</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="action_profile">Profile</string>
    <string name="no_account_register">Don\'t have an account? Click here to register.</string>
    <string name="already_registered">Already have an account? Click here to login.</string>
    <string name="your_library_title">Your library</string>
    <string name="playlists_title">Playlists</string>
    <string name="playlist_title_placeholder">Playlist Title</string>
    <string name="default_num_songs">0 songs</string>
    <string name="owner_login_placeholder">Owner login</string>
    <string name="track_title_placeholder">Track Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_title">Profile</string>
    <string name="create_a_playlist">Create a playlist</string>
    <string name="playlist_name_title">Name</string>
    <string name="enter_playlist_name_placeholder">Enter playlist name</string>
    <string name="description_title">Description</string>
    <string name="private_title">Private</string>
    <string name="create_playlist_title">Create playlist</string>
    <string name="playlist_description_placeholder">Playlist description placeholder</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="genre_item_placeholder">Genre</string>
    <string name="playlist_description">Playlist Description</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="back_button">Back button</string>
    <string name="option_button">Option button</string>
    <string name="playlist_thumbnail">Playlist Thumbnail</string>
    <string name="create_playlist_button">Create playlist button</string>
    <string name="genre_title_placeholder">Genre Title</string>
    <string name="play_image">Play image</string>
    <string name="duration_placeholder">00:00</string>
    <string name="track_thumbnail">Track thumbnail</string>
    <string name="default_song_title">No song selected</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="create_button">Create button</string>
    <string name="first_name_placeholder">First name</string>
    <string name="last_name_placeholder">Last name</string>
    <string name="email_placeholder">login@students.salle.url.edu</string>
    <string name="date_placeholder">1970–01–01T00:00:00Z</string>
    <string name="search_search_bar">Users, songs or playlists</string>
    <string name="search_results_title">Search Results</string>
    <string name="menu_track_like">Like</string>
    <string name="menu_track_add_to_playlist">Add to playlist</string>
    <string name="menu_track_share">Share</string>
    <string name="menu_track_owner">Go to Artist</string>
    <string name="home_title">Home</string>
    <string name="featured_artists_title">Featured artists</string>
    <string name="featured_playlists_title">Featured playlists</string>
    <string name="featured_tracks_title">Featured tracks</string>
    <string name="add_to_playlist_title_placeholder">Add to playlist</string>
    <string name="ib_new_playlist">New playlist</string>
    <string name="stats_title">Stats</string>
    <string name="playlist_followers_placeholder">0</string>
    <string name="view_all">View All</string>
    <string name="playlists">Playlists</string>
    <string name="all_tracks">All Tracks</string>
    <string name="artist">artist</string>
    <string name="tracks">tracks</string>
    <string name="follow">FOLLOW</string>
    <string name="unfollow">UNFOLLOW</string>
    <string name="download_track">Download song</string>
</resources>
