<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDefault"
    tools:context=".fragments.SearchResponseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_search_response_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_search_response_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/back_button"
            android:gravity="end"
            android:scaleType="center"
            android:src="@drawable/outline_arrow_back_24"
            android:tint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.sallefy.custom_views.GradientHeadline1
            android:id="@+id/tv_search_title"
            style="@style/Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_results_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ib_search_response_back"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        style="@style/Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorSurface"
        android:backgroundTint="@color/colorSurface"
        android:drawableStart="@drawable/ic_search"
        android:drawableTint="@color/colorPrimaryDark"
        android:textColor="@color/colorTextSecondaryVariant"
        app:layout_constraintBottom_toTopOf="@id/rv_search_response_tracks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_search_response_navigation"
        app:queryHint="@string/search_hint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_response_tracks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view" />

</androidx.constraintlayout.widget.ConstraintLayout>